syntax = "proto3";

package ly.pp.justpiano3.protobuf.request;

option java_outer_classname = "OnlineRequest";

// 服务器接收协议
message Message {
  reserved 1, 11, 20, 22;
  oneof request {
    // 用户登录对战
    Login login = 10;
    // 大厅聊天
    HallChat hall_chat = 12;
    // 房间聊天
    RoomChat room_chat = 13;
    // 每日挑战
    Challenge challenge = 16;
    // 家族
    Family family = 18;
    // 进入大厅后加载房间列表
    LoadRoomList load_room = 19;
    // 商店
    Shop shop = 26;
    // 主界面加载用户信息及大厅列表
    LoadUser load_user = 28;
    // 进入大厅
    EnterHall enter_hall = 29;
    // 退出大厅
    QuitHall quit_hall = 30;
    // 更换服装
    ChangeClothes change_clothes = 33;
    // 查看好友、私信和主界面查看搭档
    LoadUserInfo load_user_info = 34;
    // 大厅加载用户列表或房间加载邀请列表
    LoadUserList load_user_list = 36;
    // 等级考试
    ClTest cl_test = 40;
    // 心跳检测
    HeartBeat heart_beat = 41;
  }
}

// 用户登录对战
message Login {
  // 安卓应用包名
  string package_name = 1;
  // 日期版本号
  string version_code = 2;
  // 用户账号
  string account = 3;
  // 用户密码
  string password = 4;
}

// 大厅聊天
message HallChat {
  // 私聊用户名称
  string user_name = 1;
  // 消息内容
  string message = 2;
}

// 房间聊天
message RoomChat {
  // 私聊用户名称
  string user_name = 1;
  // 消息内容
  string message = 2;
  // 消息文字颜色
  uint32 color = 3;
}

// 每日挑战
message Challenge {
  // 消息类型
  uint32 type = 1;
  // 加密时间戳
  optional uint64 code = 2;
  // 弹奏状态数组
  optional string status_array = 3;
}


// 家族
message Family {
  // 消息类型
  uint32 type = 1;
  // 家族id
  optional uint32 family_id = 2;
  // 家族宣言
  optional string message = 3;
  // 列表当前页数
  optional uint32 page = 4;
  // 家族名称
  optional string family_name = 5;
  // 相关用户名称
  optional string user_name = 6;
  // 相关状态
  optional uint32 status = 7;
}

// 进入大厅后加载房间列表
message LoadRoomList {
  // 大厅id
  uint32 hall_id = 1;
}

// 商店
message Shop {
  // 消息类型
  uint32 type = 1;
  // 商品id
  optional uint32 product_id = 2;
}

// 主界面加载用户信息及大厅列表
message LoadUser {

}

// 进入大厅
message EnterHall {
  // 大厅id
  uint32 hall_id = 1;
  // 大厅密码（若有）
  optional string password = 2;
}

// 退出大厅
message QuitHall {

}

// 更换服装
message ChangeClothes {
  // 消息类型
  uint32 type = 1;
  // 购买服装分类编号
  optional uint32 buy_clothes_type = 2;
  // 购买服装编号
  optional uint32 buy_clothes_id = 3;
  // 头发
  uint32 hair = 4;
  // 眼睛
  uint32 eye = 5;
  // 上衣
  uint32 jacket = 6;
  // 裤子
  uint32 trousers = 7;
  // 鞋子
  uint32 shoes = 8;
}

// 查看好友、私信和主界面查看搭档
message LoadUserInfo {
  // 消息类型
  uint32 type = 1;
  // 列表当前页数
  optional int32 page = 2;
}

// 大厅加载用户列表或房间加载邀请列表
message LoadUserList {

}

// 等级考试
message ClTest {
  // 消息类型
  uint32 type = 1;
  // 加密时间戳
  optional uint64 code = 2;
  // 用户选择的考级曲谱序号（当前等级对于用户的第几首）
  optional uint32 song_index = 3;
  // 弹奏状态数组
  optional string status_array = 4;
}

// 心跳检测
message HeartBeat {

}